k8s/manifests/network-system/traefik/static-routes/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperion
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: minio
      port: 9000
    - name: http
      port: 5000
  externalName: hyperion.lab
